--- a/app/src/main/res/values-night/dimens.xml
+++ b/app/src/main/res/values-night/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dim">8dp</dimen>
+    <dimen name="margin_start_title_tv">8dp</dimen>
+    <dimen name="margin_top_title_tv">8dp</dimen>
 </resources>
